--- a/Pear/Controllers/Profiles/ProfileDoDontViewController.storyboard
+++ b/Pear/Controllers/Profiles/ProfileDoDontViewController.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="tns-Tj-5Ab">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="tns-Tj-5Ab">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -56,12 +55,11 @@
                             </scrollView>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="e0w-vx-wtg" firstAttribute="trailing" secondItem="cRm-Jy-mUF" secondAttribute="trailing" id="3wx-vM-ZFZ"/>
-                            <constraint firstItem="e0w-vx-wtg" firstAttribute="leading" secondItem="cRm-Jy-mUF" secondAttribute="leading" id="7Rg-2K-CxW"/>
+                            <constraint firstItem="e0w-vx-wtg" firstAttribute="trailing" secondItem="Amx-4P-xls" secondAttribute="trailing" id="3wx-vM-ZFZ"/>
+                            <constraint firstItem="e0w-vx-wtg" firstAttribute="leading" secondItem="Amx-4P-xls" secondAttribute="leading" id="7Rg-2K-CxW"/>
                             <constraint firstItem="VWS-Hu-dqy" firstAttribute="top" secondItem="e0w-vx-wtg" secondAttribute="bottom" id="Anv-bL-F64"/>
                             <constraint firstItem="e0w-vx-wtg" firstAttribute="width" secondItem="Amx-4P-xls" secondAttribute="width" id="w19-GX-iWW"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="cRm-Jy-mUF"/>
                     </stackView>
                     <size key="freeformSize" width="375" height="260"/>
                     <connections>
