--- a/Pear/Controllers/Discovery Flow/DiscoverySimpleViewController.storyboard
+++ b/Pear/Controllers/Discovery Flow/DiscoverySimpleViewController.storyboard
@@ -29,6 +29,9 @@
                                         <state key="normal" title="Create">
                                             <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="createButtonClicked:" destination="JZe-kz-mxa" eventType="touchUpInside" id="gx7-Lx-fdr"/>
+                                        </connections>
                                     </button>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dicovery-icon-pear" translatesAutoresizingMaskIntoConstraints="NO" id="8Jc-HP-bae" userLabel="Center Icon">
                                         <rect key="frame" x="167.5" y="5" width="40" height="40"/>
